Fix more checkstyle issues (#19)